[package]
name = "ziprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ziprs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.24.0"
rayon = "1.10.0"
tempfile = "3.20.0"
walkdir = "2.5.0"
zip = "4.0.0"
clap = { version = "4.5.4", features = ["derive"] }
